# photon

./: .gitignore  Makefile.am  Makefile.in  Photon-0.15.2-update.md  Photon-qt.pro  QC-Photon.md  README.md  build.sh  configure  configure.ac  configure.lineno  libbitcoinconsensus.pc  libtool  mainnet-carryback-audit-2026-04-18.md
contrib/: send-big-pho.py
contrib/devtools/: README.md  gen-manpages.py  gen-photon-conf.sh
contrib/init/: README.md  org.bitcoin.bitcoind.plist  photond.conf  photond.init  photond.openrc  photond.openrcconf  photond.service
contrib/linearize/: example-linearize.cfg
contrib/linux-release/: blakecoin-qt-launcher.c
contrib/macdeploy/: README.md  (+2 more)
doc/: README.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  init.md  release-notes.md
doc/man/: Makefile.am  photon-cli.1  photon-qt.1  photon-tx.1  photon-util.1  photon-wallet.1  photond.1
electrum/: README.md  coin.env
share/: setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  auxpow.cpp  auxpow.h  base58.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  hash.h  init.cpp  key.cpp  main.cpp  main.h  makefile.unix  miner.cpp  net.cpp  net.h  pow.cpp  rpcwallet.cpp  util.cpp  util.h  validation.cpp  validation.h  wallet.cpp
test/: config.ini
(+190 files in other folders)
