dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=photond.1
endif

if ENABLE_QT
  dist_man1_MANS+=photon-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=photon-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=photon-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=photon-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=photon-wallet.1
endif
endif
